<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/large_margin"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageMovie"
        android:layout_marginStart="@dimen/large_margin"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/imageMovie"
        android:text="@string/movie_name" />

    <TextView
        android:id="@+id/textReleaseyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textName"
        android:layout_below="@+id/textName"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/release_year" />

    <TextView
        android:id="@+id/textRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textReleaseyear"
        android:layout_below="@+id/textReleaseyear"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/rating" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageMovie"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@color/colorTransparentVeniceBlue" />

    <TextView
        android:id="@+id/textStatiDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageMovie"
        android:layout_below="@+id/divider_2"
        android:layout_marginTop="@dimen/large_margin"
        android:breakStrategy="balanced"
        android:text="@string/movie_desc" />

</RelativeLayout>