<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textMoviename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:textStyle="bold"
        android:text="@string/movie_title"
        android:layout_alignBottom="@+id/imageMovie"
        android:layout_toEndOf="@+id/imageMovie"
        android:layout_marginBottom="31dp" />

    <ImageButton
        android:id="@+id/imageLessmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:background="@null"
        android:focusable="false"
        android:layout_alignBottom="@+id/textMoviename"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/releaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageMovie"
        android:layout_below="@+id/imageMovie"
        android:visibility="gone"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/release_year" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/releaseYear"
        android:layout_below="@+id/releaseYear"
        android:visibility="gone"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/rating" />


</RelativeLayout>